# Integrated_code_fire_font

./: Integrated_Code_Fire.code-workspace  OFL-1.1  README.md  pyproject.toml
FrankenFont/: FrankenFont.glyphs
FrankenFont/glyphs/: Hong_Kong.Bold.OTC.cidfontinfo  Hong_Kong.Bold.OTC.features  Hong_Kong.ExtraLight.OTC.features  Hong_Kong.Heavy.OTC.features  Hong_Kong.Italic.Bold.OTC.features  Hong_Kong.Italic.ExtraLight.OTC.features  Hong_Kong.Italic.Heavy.OTC.features  Hong_Kong.Italic.Light.OTC.features  Hong_Kong.Italic.Medium.OTC.features  Hong_Kong.Italic.Normal.OTC.features  Hong_Kong.Italic.Regular.OTC.cidfontinfo  Hong_Kong.Italic.Regular.OTC.features  Hong_Kong.Light.OTC.features  Hong_Kong.Medium.OTC.features  Hong_Kong.Normal.OTC.cidfontinfo  Hong_Kong.Normal.OTC.features  Hong_Kong.Regular.OTC.cidfontinfo  Hong_Kong.Regular.OTC.features  Japan.Bold.OTC.features  Japan.ExtraLight.OTC.features  Japan.Heavy.OTC.cidfontinfo  Japan.Heavy.OTC.features  Japan.Italic.Bold.OTC.features  Japan.Italic.ExtraLight.OTC.features  Japan.Italic.Heavy.OTC.features  Japan.Italic.Light.OTC.cidfontinfo  Japan.Italic.Light.OTC.features  Japan.Italic.Medium.OTC.cidfontinfo  Japan.Italic.Medium.OTC.features  Japan.Italic.Normal.OTC.features  Japan.Italic.Regular.OTC.features  Japan.Light.OTC.features  Japan.Medium.OTC.features  Japan.Normal.OTC.features  Japan.Regular.OTC.cidfontinfo  Japan.Regular.OTC.features  Korea.Bold.OTC.features  Korea.ExtraLight.OTC.features  Korea.Heavy.OTC.features  Korea.Italic.Bold.OTC.cidfontinfo  (+49 more)
FrankenFont/metadata/: Hong_Kong.Italic.SourceHanMono.UTF16.H  Hong_Kong.Italic.SourceHanMono.UTF32.H  Japan.Italic.SourceHanMono.UTF16.H  Japan.Italic.SourceHanMono.UTF32.H  Korea.Italic.SourceHanMono.UTF16.H  Korea.Italic.SourceHanMono.UTF32.H  Korea.SourceHanMono.UTF32.H  Simplified_Chinese.Italic.SourceHanMono.UTF16.H  Simplified_Chinese.SourceHanMono.UTF16.H  Taiwan.Italic.SourceHanMono.UTF16.H  Taiwan.SourceHanMono.UTF16.H
SourceHanMono/glyphs/: Hong_Kong.ExtraLight.OTC.cidfontinfo  Hong_Kong.Italic.ExtraLight.OTC.cidfontinfo  Hong_Kong.Italic.Light.OTC.cidfontinfo  Japan.ExtraLight.OTC.cidfontinfo  Japan.Italic.Heavy.OTC.cidfontinfo  Japan.Medium.OTC.cidfontinfo  Japan.Normal.OTC.cidfontinfo  Korea.Bold.OTC.cidfontinfo  Korea.ExtraLight.OTC.cidfontinfo  Korea.Italic.Medium.OTC.cidfontinfo  Korea.Italic.Regular.OTC.cidfontinfo  Simplified_Chinese.Italic.Bold.OTC.cidfontinfo  Simplified_Chinese.Italic.ExtraLight.OTC.cidfontinfo  SourceHanMono.Hong_Kong.Heavy.cidfontinfo  SourceHanMono.Hong_Kong.Italic.Bold.cidfontinfo  SourceHanMono.Hong_Kong.Italic.Heavy.cidfontinfo  SourceHanMono.Hong_Kong.Italic.Medium.cidfontinfo  SourceHanMono.Hong_Kong.Italic.Normal.cidfontinfo  (+33 more)
batchScripts/: SourceHanMonoSCConvertTOttf.cmd  SourceHanMonoSCScale.cmd  SourceHanMonoSCSubset.cmd  checkForErrors.txt  checkForErrorsDelete.cmd  metadataExport.txt  metadataMerge.txt  metadataRename.txt  releaseMoveAndCleanup.cmd  releaseMoveCompiledFonts.cmd  workbenchCopyInputFonts.cmd  workbenchDeleteAll.cmd  workbenchDeleteInputFonts.cmd  workbenchInitialize.cmd  workbenchInitializeVariables.cmd  workbenchMergeFonts.cmd  workbenchPrepareSourceHanMonoSC.cmd
(+80 files in other folders)
