[project]
name = "Integrated_Code_Fire"
version = "0.0.6"
description = "Integrated Code 火 is a code-centric font combining Fira Code and Source Han Mono."
readme = "README.md"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
license = "CC-BY-NC-4.0"
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/Integrated_Code_Fire", Issues = "https://github.com/hunterhogan/Integrated_Code_Fire/issues", Repository = "https://github.com/hunterhogan/Integrated_Code_Fire" }
requires-python = ">=3.14"
dependencies = [
    "afdko>=4.0.3",
    "fontmake[all]>=3.11.1",
    "fonttools[ufo,unicode]>=4.61.1",
    "hunterMakesPy>=0.4.1",
    "more-itertools>=10.8.0",
    "platformdirs>=4.9.2",
    "toolz>=1.1.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "toolz-stubs>=0.3.1",
]
