[project]
name = "Integrated_Code_Fire"
version = "0.0.8"
description = "Integrated Code 火 is a monospaced programming font with CJK languages. | 简化字 | 日本 | 한국인 | 香港 | 台灣"
readme = "README.md"
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
license = "CC-BY-NC-4.0"
urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/Integrated_Code_Fire", Issues = "https://github.com/hunterhogan/Integrated_Code_Fire/issues", Repository = "https://github.com/hunterhogan/Integrated_Code_Fire" }
requires-python = ">=3.14"
dependencies = [
    "afdko>=4.0.3",
    "fontmake[all]>=3.11.1",
    "fonttools[ufo,unicode]>=4.61.1",
    "hunterMakesPy>=0.4.3",
    "more-itertools>=10.8.0",
    "toolz>=1.1.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "toolz-stubs>=0.3.1",
]
